# aiops-ia-projetos

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: log-investigator.md
01-langchain-token-analysis/: README.md  REFACTORING_CHECKLIST.md  llms.py  main.py  prompts.py  requirements.txt
02-context-window-monitor/: README.md  app.py  chat_manager.py  config.py  metrics.py  requirements.txt  visualizations.py
03-temperature-topk-topp/: README.md  main.py  requirements.txt
04-long-term-memory/: README.md  main.py  memory.json  pyproject.toml
05-rag-retrieve-inject/: .gitignore  Dockerfile  README.md  app.py  compose.yml  pyproject.toml  rag.py
05-rag-retrieve-inject/data/docs/: postmortem-cert-expiry-outage.md  postmortem-deploy-rollback.md  runbook-crashloopbackoff.md  runbook-db-connection-pool.md  runbook-disk-pressure.md  runbook-oomkilled.md  runbook-tls-cert-expired.md
06-logs/: logs-checkout-service.md
results/: report.md
